--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="half-width">
             <div class="Top">
                 <h1>Stay Focused on</h1>
-                <h1><span id="Mission-Color">Mission 2022</span></h1>
+                <h1><span class="Color">Mission 2022</span></h1>
             </div>
             <p id="top-para">We were founded on the belief that style shouldn’t break the bank. Our goal is to change
                 the way you think about fashion by delivering premium designs at radically fair prices.
@@ -30,6 +30,33 @@
 
         <div class="half-width">
             <img src="images/person/person-2.png" alt="">
+        </div>
+    </section>
+    <section class="middle-banner">
+        <div>
+            <h2>Our Mission in <span class="Color">2022</span> </h2>
+        </div>
+        <div class="flexible-container">
+            <div id="Mission">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h3>Mission</h3>
+                <p>The statement goes on to explain the mission.
+                    First, they tell you what they aim to achieve: “Change the way you think about fashion.” Then, they
+                    tell you how they intend to do it: “By delivering premium designs at radically fair prices.”
+                </p>
+            </div>
+            <div id="vission">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h3>Vission</h3>
+                <p>We believe that buying products should be easy and fun. It should leave you happy and good-looking,
+                    with money in your pocket. We also believe that everyone has the right to see.</p>
+            </div>
+            <div id="goal">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h3>Goal</h3>
+                <p>Our goal is to change the way you think about fashion by delivering premium designs at radically fair
+                    prices.</p>
+            </div>
         </div>
     </section>
 
