--- a/index.html
+++ b/index.html
@@ -56,14 +56,45 @@
                 <h3>Goal</h3>
                 <p>Our goal is to change the way you think about fashion by delivering premium designs at radically fair
                     prices.</p>
+
             </div>
         </div>
     </section>
-
-
-
-
-
+    <section class="third-banner flexible-container">
+        <div class="picture-third">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="half-width third-para">
+            <h3>Develop</h3>
+            <h3>without Limits</h3>
+            <p>Movado, the flagship brand within the Movado Group Inc. portfolio, was founded in La Chaux-de-Fonds,
+                Switzerland in 1881, and acquired by the corporation in 1983. Recognized today for its iconic Museum®
+                dial and modern aesthetic, Movado has earned more than 100 patents and 200 international awards for
+                watch design and time technology, and Movado timepieces are in the permanent collections of museums
+                worldwide.</p>
+            <a class="read-button" target="_blank" href="https://www.mvmt.com/ca-about-us.html">Read the
+                Documentation</a>
+        </div>
+    </section>
+    <section class="flexible-container">
+        <div class="half-width fourth-para">
+            <h4>Know our</h4>
+            <h4>Global Community</h4>
+            <p>One of the world's premier watchmakers, Movado Group, Inc. (MGI) designs, manufactures and distributes
+                watches from nine of the most recognized and respected names in time: our wholly owned Movado, Concord
+                and EBEL brands along with our Coach, HUGO BOSS, Juicy Couture, Lacoste, Tommy Hilfiger and Scuderia
+                Ferrari licensed watch brands.</p>
+            <a class="read-button" target="_blank" href="https://www.mvmt.com/ca-about-us.html">Read the
+                Documentation</a>
+        </div>
+        <div class="picture-fourth">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
+    <footer>
+        <h1><span id="coloer-footer-black">Mission</span> <span id="coloer-footer-header">2022</span> </h1>
+        <p><span id="coloer-footer-black">Hard work, Perseverance, and Determination for 2022</span></p>
+    </footer>
 </body>
 
 </html>
