--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <section class="flexible-container">
         <div class="half-width">
             <div class="Top">
@@ -32,6 +33,7 @@
             <img src="images/person/person-2.png" alt="">
         </div>
     </section>
+
     <section class="middle-banner">
         <div>
             <h2>Our Mission in <span class="Color">2022</span> </h2>
@@ -60,6 +62,7 @@
             </div>
         </div>
     </section>
+
     <section class="third-banner flexible-container">
         <div class="picture-third">
             <img src="images/pictures/coding.png" alt="">
@@ -76,6 +79,7 @@
                 Documentation</a>
         </div>
     </section>
+
     <section class="flexible-container">
         <div class="half-width fourth-para">
             <h4>Know our</h4>
@@ -91,6 +95,29 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+
+    <section>
+        <div>
+            <h2>Build<span class="Color"> Online Shopping Application</span>
+            </h2>
+        </div>
+    </section>
+
+    <section class="flexible-container">
+        <div class="picture-fifth">
+            <img src="images/shapes/Shopping apps.png" alt="">
+        </div>
+        <div class="half-width Fifth-para">
+            <h4>Shoppinng</h4>
+            <h4>From Home</h4>
+            <p>One of the world's premier watchmakers, Movado Group, Inc. (MGI) designs. We will launch an application
+                for our customers which will help customers to buy products easily from anyhome. In this application
+                there will be a lot of features. This app will be super user friendly. Any ages people can easily buy
+                products by using this apllication.We hope something new is comming soon.</p>
+            <a class="read-button" target="_blank" href="https://www.mvmt.com/ca-about-us.html">App Features</a>
+        </div>
+    </section>
+
     <footer>
         <h1><span id="coloer-footer-black">Mission</span> <span id="coloer-footer-header">2022</span> </h1>
         <p><span id="coloer-footer-black">Hard work, Perseverance, and Determination for 2022</span></p>
